ld/ldgram.y
@@ -1,6 +1,6 @@
 /* A YACC grammar to parse a superset of the AT&T linker scripting language.
    Copyright 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000,
-   2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009
+   2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011
    Free Software Foundation, Inc.
    Written by Steve Chamberlain of Cygnus Support (steve@cygnus.com).
 
@@ -176,7 +176,7 @@ defsym_expr:
 		NAME '=' exp
 		{
 		  ldlex_popstate();
-		  lang_add_assignment(exp_assop($3,$2,$4));
+		  lang_add_assignment (exp_defsym ($2, $4));
 		}
 	;
 
@@ -657,15 +657,15 @@ end:	';' | ','
 assignment:
 		NAME '=' mustbe_exp
 		{
-		  lang_add_assignment (exp_assop ($2, $1, $3));
+		  lang_add_assignment (exp_assign ($1, $3));
 		}
 	|	NAME assign_op mustbe_exp
 		{
-		  lang_add_assignment (exp_assop ('=', $1,
-						  exp_binop ($2,
-							     exp_nameop (NAME,
-									 $1),
-							     $3)));
+		  lang_add_assignment (exp_assign ($1,
+						   exp_binop ($2,
+							      exp_nameop (NAME,
+									  $1),
+							      $3)));
 		}
 	|	PROVIDE '(' NAME '=' mustbe_exp ')'
 		{
@@ -983,7 +983,7 @@ section:	NAME 		{ ldlex_expression(); }
 		opt_exp_with_type
 		{
 		  ldlex_popstate ();
-		  lang_add_assignment (exp_assop ('=', ".", $3));
+		  lang_add_assignment (exp_assign (".", $3));
 		}
 		'{' sec_or_group_p1 '}'
 	|	INCLUDE filename
